[package]
name = "op_return_maker"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10.8"
secp256k1 = { version ="0.31.0", features = ["rand", "hashes"] }
bitcoin = "0.32.5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
anyhow = "1.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
hex = "0.4.3"